INCLUDES = $(all_includes) -I.. -I../nes -I../sndhrdw -I../libsnss -I../cpu


noinst_LIBRARIES = libmappers.a

libmappers_a_SOURCES = map000.c \
	map001.c \
	map002.c \
	map003.c \
	map004.c \
	map005.c \
	map007.c \
	map008.c \
	map009.c \
	map011.c \
	map015.c \
	map016.c \
	map018.c \
	map019.c \
	map024.c \
	map032.c \
	map033.c \
	map034.c \
	map040.c \
	map041.c \
	map042.c \
	map046.c \
	map050.c \
	map064.c \
	map065.c \
	map066.c \
	map070.c \
	map073.c \
	map075.c \
	map078.c \
	map079.c \
	map085.c \
	map087.c \
	map093.c \
	map094.c \
	map099.c \
	map160.c \
	map229.c \
	map231.c \
	mapvrc.c
